# Reflection

./: CMakeLists.txt  README.md  main.cpp
Furniture/includes/: Bed.h  Chair.h  Furniture.h  FurnitureFactory.h  Sofa.h  Table.h
Furniture/srcs/: Bed.cpp  Chair.cpp  FurnitureFactory.cpp  Sofa.cpp  Table.cpp
